<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.so2.ace.agenda2017.MainActivity">

    <!--Hecho por Eisner López Acevedo-->


    <Button
      android:id="@+id/eliminar_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:onClick="btnEliminar"
      android:text="@string/eliminar" />

    <Button
      android:id="@+id/agregar_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:onClick="btnAgregar"
      android:text="@string/agregar" />

    <Button
        android:id="@+id/b_task_list"

        android:layout_height="wrap_content"
        android:onClick="btnListar"
        android:text="@string/btn_task_list"
        android:layout_width="match_parent" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msj_bienvenida"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textColor="@color/colorAccent" />


        <Button
            android:id="@+id/modificar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnModificar"
            android:text="@string/modificar"
             />

        <Button
            android:id="@+id/listarbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnBuscar"
            android:text="@string/listar"
             />

</LinearLayout>