<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_agregar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.so2.ace.agenda2017.Agregar">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/nombre"
            android:id="@+id/nombre_txt"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/nombre_input"
            android:layout_row="0"
            android:layout_column="1"
            android:hint="@string/nombre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apellido"
            android:id="@+id/apellido_txt"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/apellido_input"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="@string/apellido"
            android:inputType="text" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/edad"
            android:id="@+id/edad_txt"
            android:layout_row="2"
            android:layout_column="0" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/t_lefono"
            android:id="@+id/tel_txt"
            android:layout_row="3"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/edad_input"
            android:layout_row="2"
            android:layout_column="1"
            android:hint="@string/edad"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email"
            android:id="@+id/email_txt"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:id="@+id/telefono_input"
            android:layout_row="3"
            android:layout_column="1"
            android:hint="@string/t_lefono"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/alias"
            android:id="@+id/lbl_alias"
            android:layout_row="5"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_input"
            android:layout_row="4"
            android:layout_column="1"
            android:hint="@string/correo_electr_nico" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/alias_txt"
            android:layout_row="5"
            android:layout_column="1"
            android:hint="@string/conocido_como"
            android:inputType="text|textCapCharacters" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/msj_agregar"
        android:id="@+id/titulo_txt"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_hecho"
        android:id="@+id/agregar_btn"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:onClick="agregar_clicked" />

</RelativeLayout>
