<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_buscar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.so2.ace.agenda2017.Buscar">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvl_items"

         />

    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/id_txt"
        android:layout_marginTop="10dp"
        android:text="@string/id" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/apellido"
        android:id="@+id/apellido_txt"

        android:layout_marginStart="21dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nombre"
        android:id="@+id/nombre_txt"
        android:layout_marginStart="20dp" />


</LinearLayout>
